summery
Merge af ny shot kode, ny map generation.
Når man rammer en blok så forsvinder den